Sort skills by name in UI